modules/wycs/tests/valid/test_set_15.wyal
assert:
  forall ({int} xs, {int} ys):
    forall (int x in xs):
       (xs ⊆ ys) ==> x in ys
