modules/wycs/tests/invalid/test_056.wyal
assert:
  forall({int} xs, {int} ys):
    xs ⊆ ys ==> xs ⊂ ys